--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -3,27 +3,26 @@ name: Test Build and Run
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
-
   test-build-and-run:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Set up Go
-      uses: actions/setup-go@v5
-      with:
-        go-version: '1.22'
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: "1.22"
 
-    - name: Build
-      run: make build
+      - name: Build
+        run: make build
 
-    - name: Setup default template and config
-      run: cp examples/ .
+      - name: Setup default template and config
+        run: cp examples/* .
 
-    - name: Run program
-      run: ./paperboy
+      - name: Run program
+        run: ./paperboy
