--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -1,25 +1,28 @@
-# This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
-
-name: Test Build
+---
+name: Test Build and Run
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
-
-  build:
+  test-build-and-run:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Set up Go
-      uses: actions/setup-go@v5
-      with:
-        go-version: '1.22'
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: "1.22"
 
-    - name: Build
-      run: make build
+      - name: Build
+        run: make build
+
+      - name: Setup default template and config
+        run: cp examples/* .
+
+      - name: Run program
+        run: ./paperboy
